--- a/Prueba.css
+++ b/Prueba.css
@@ -508,6 +508,7 @@ body {
     flex-direction: column;
     gap: 20px;
 }
+/* --- CORREGIR DESPUES --- */
 
 .info-card-contact {
     background: white;
